# cookiecutter-aws-monorepo

./: cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test.yml
